[package]
name = "lhpnc-play"
description = "Playfound for Linux high performance network communication"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
async-stream = "0.3.6"
futures = "0.3.32"
prost = "0.14.3"
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.18"
tonic = "0.14.5"
tonic-prost = "0.14"

[[bin]]
name = "gsrv"
path = "src/server.rs"

[[bin]]
name = "gcli"
path = "src/client.rs"

[build-dependencies]
tonic-prost-build = "0.14"
