[package]
name = "lhpnc-play"
description = "Playfound for Linux high performance network communication"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
async-stream = "0.3.6"
futures = "0.3.32"
prost = "0.14.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.27"
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.18"
tokio-uring = "0.5.0"
tonic = "0.14.5"
tonic-prost = "0.14"

[[bin]]
# "gRPC hello server"
name = "grpc_srv"
path = "src/grpc_srv.rs"

[[bin]]
# "gRPC hello client"
name = "grpc_cli"
path = "src/grpc_cli.rs"

[[bin]]
# "TCP io_uring server"
name = "tcp_io_uring_srv"
path = "src/tcp_io_uring_srv.rs"

[[bin]]
# "TCP io_uring client"
name = "tcp_io_uring_cli"
path = "src/tcp_io_uring_cli.rs"

[build-dependencies]
tonic-prost-build = "0.14"
